--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 USERNAME=nick
 password=123456
+DATABASE=mongodb+srv://nikita:<PASSWORD>@cluster0-hzfmw.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=glZutS0dGir7KIZ2
