--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.5"
+    "slugify": "^1.3.5",
+    "validator": "^11.1.0"
   },
   "engines": {
     "node": ">=8.3.0"
